setup: Merge vadl-lsp executable with vadl-cli